@@ -20,8 +20,8 @@ public class VectorMapTest {
     @Before
     public void setUp(){
         map = new VectorMap<>();
-        map.put("primes", 2);
-        map.put("primes", 3);
+        map.put("primes", Integer.valueOf(2));
+        map.put("primes", Integer.valueOf(3));
         map.put("primes", 5);
         map.put("primes", 7);
 
@@ -52,9 +52,14 @@ public class VectorMapTest {
 
     @Test
     public void testElement(){
-        assertThat(map.get("primes", 0), is(2));
-        assertThat(map.get("primes", 1), is(3));
-        assertThat(map.get("even", 1), is(4));
+        Integer value1 = map.get("primes", 0);
+        assertThat(value1, is(Integer.valueOf(2)));
+
+        Integer value2 = map.get("primes", 1);
+        assertThat(value2, is(Integer.valueOf(3)));
+
+        Integer value3 = map.get("even", 1);
+        assertThat(value3, is(Integer.valueOf(4)));
     }
 
     @Test
@@ -68,10 +73,10 @@ public class VectorMapTest {
         map.remove("odd");
         assertThat(map.get("odd"), is(nullValue()));
         assertThat(map.get("primes"),
-                is(contains(new Integer(2), new Integer(3), new Integer(5), new Integer(7))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7))));
 
         assertThat(map.get("even"),
-                is(contains(new Integer(2), new Integer(4), new Integer(6), new Integer(8))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(4), Integer.valueOf(6), Integer.valueOf(8))));
     }
 
     @Test
@@ -80,11 +85,11 @@ public class VectorMapTest {
         List<VectorMap.Entry<String, List<Integer>>> list = stream.collect(Collectors.toList());
         assertThat(list.size(), is(3));
         assertThat(list.get(0).key(), is("primes"));
-        assertThat(list.get(0).value(), is(contains(new Integer(2), new Integer(3), new Integer(5), new Integer(7))));
+        assertThat(list.get(0).value(), is(contains(Integer.valueOf(2), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7))));
         assertThat(list.get(1).key(), is("even"));
-        assertThat(list.get(1).value(), is(contains(new Integer(2), new Integer(4), new Integer(6), new Integer(8))));
+        assertThat(list.get(1).value(), is(contains(Integer.valueOf(2), Integer.valueOf(4), Integer.valueOf(6), Integer.valueOf(8))));
         assertThat(list.get(2).key(), is("odd"));
-        assertThat(list.get(2).value(), is(contains(new Integer(1), new Integer(3), new Integer(5), new Integer(7), new Integer(9))));
+        assertThat(list.get(2).value(), is(contains(Integer.valueOf(1), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7), Integer.valueOf(9))));
     }
 
     @Test
@@ -127,24 +132,24 @@ public class VectorMapTest {
         map.remove("primes", 1);
 
         assertThat(map.get("primes"),
-                is(contains(new Integer(2), new Integer(5), new Integer(7))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(5), Integer.valueOf(7))));
 
         assertThat(map.get("even"),
-                is(contains(new Integer(2), new Integer(4), new Integer(6), new Integer(8))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(4), Integer.valueOf(6), Integer.valueOf(8))));
 
         assertThat(map.get("odd"),
-                is(contains(new Integer(1), new Integer(3), new Integer(5), new Integer(7), new Integer(9))));
+                is(contains(Integer.valueOf(1), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7), Integer.valueOf(9))));
     }
 
     @Test
     public void testEachElement(){
         assertThat(map.get("primes"),
-                is(contains(new Integer(2), new Integer(3), new Integer(5), new Integer(7))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7))));
 
         assertThat(map.get("even"),
-                is(contains(new Integer(2), new Integer(4), new Integer(6), new Integer(8))));
+                is(contains(Integer.valueOf(2), Integer.valueOf(4), Integer.valueOf(6), Integer.valueOf(8))));
 
         assertThat(map.get("odd"),
-                is(contains(new Integer(1), new Integer(3), new Integer(5), new Integer(7), new Integer(9))));
+                is(contains(Integer.valueOf(1), Integer.valueOf(3), Integer.valueOf(5), Integer.valueOf(7), Integer.valueOf(9))));
     }
 }
